navigation: fix hiding scrollbar for few items

--- a/components/navigation/Navigation.scss
+++ b/components/navigation/Navigation.scss
@@ -18,7 +18,7 @@ nav {
   transition-duration: 0.2s;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 104;
-  overflow-y: scroll;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 
   @include xlarge {
